Adds GTest and CTest to OpenROAD
Starting with the IFP module

Signed-off-by: Ethan Mahintorabi <ethanmoon@google.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -226,6 +226,7 @@ if (${SPDLOG_FMT_EXTERNAL})
 endif()
 
 find_package(Threads REQUIRED)
+find_package(GTest REQUIRED)
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 
 ################################################################
